<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d4"
    tools:context=".addCard">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="362dp"
        android:layout_height="84dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t1"
        android:translationX="16dp"
        android:translationY="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t2"
        android:translationX="16dp"
        android:translationY="180dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t3"
        android:translationX="16dp"
        android:translationY="215dp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="-4dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t4"
        android:translationX="16dp"
        android:translationY="250dp"

        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/t5"
        android:textColorLink="#000000"
        android:translationX="16dp"
        android:translationY="290dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-7dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/paybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/b3"
        android:translationX="29dp"
        android:translationY="355dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="182dp"
        android:layout_height="31dp"
        android:text="@string/r1"
        android:translationX="210dp"
        android:translationY="383dp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-35dp"
        tools:layout_editor_absoluteY="-1dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check1"
        android:translationX="29dp"
        android:translationY="467dp"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check2"
        android:translationX="29dp"
        android:translationY="427dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>